Fixes too narrow columns on Pages. - issue 291

--- a/wolf/admin/stylesheets/admin.css
+++ b/wolf/admin/stylesheets/admin.css
@@ -575,12 +575,12 @@ table.index td.note {
 }
 #site-map-def { margin-top: 20px; position: relative; }
 #site-map-def .page {}
-#site-map-def .status { position: absolute; text-align: center; top: 0; right: 145px; width: 70px }
-#site-map-def .view { position: absolute; text-align: center; top: 0; right: 85px; width: 50px }
+#site-map-def .status { position: absolute; text-align: center; top: 0; right: 175px; width: 100px }
+#site-map-def .view { position: absolute; text-align: center; top: 0; right: 100px; width: 75px }
 #site-map-def .modify { position: absolute; text-align: center; top: 0; right: 5px; width: 85px; }
 #site-map-def .tag { position: absolute; top: 0; right: 375px; width: 150px; }
 #site-map-def div {
-  padding: 2px 4px;
+  padding: 2px 0px;
   font-size: 90%;
   font-weight: normal;
   background-color: #f5f5f5;
@@ -606,8 +606,8 @@ table.index td.note {
 }
 #site-map ul { list-style: none; margin:0; padding:0; background: #fff; }
 #site-map .page, #site-map-root .page {}
-#site-map .status, #site-map-root .status { position: absolute; text-align: center; top: 10px; right: 147px; width: 70px }
-#site-map .view-page, #site-map-root .view-page { position: absolute; text-align: center; top: 10px; right: 87px; width: 50px }
+#site-map .status, #site-map-root .status { position: absolute; text-align: center; top: 10px; right: 175px; width: 100px }
+#site-map .view-page, #site-map-root .view-page { position: absolute; text-align: center; top: 10px; right: 100px; width: 75px }
 #site-map .modify, #site-map-root .modify { position: absolute; text-align: center; top: 10px; right: 7px; width: 85px }
 #site-map .modify img, #site-map-root .modify img {vertical-align: middle;}
 #site-map .status { color: #9eb3bf; }
